--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 {% block html_attribs %} lang="zh-CN" {% endblock %}
 
-{% block title %} DeepDream - Saturn {% endblock %}
+{% block title %} Proyecto Final AA {% endblock %}
 
 {% block metas %}
 {{ super() }}
@@ -33,7 +33,7 @@
 <footer>
   {% block footer %}
   <div class="container-fluid">
-    <p>© 2019 Derus Mantilla</p>
+    <p>© 2019 Derus Mantilla & Andres Tarazona</p>
   </div>
   {% endblock %}
 </footer>
