--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="page-content">
   <div class="container-fluid">
     <h2>
-      <a href="https://github.com/google/deepdream">Proyecto AA DeepDream</a>
+      <a href="https://github.com/Deruus/ProyectoFinalAA">Proyecto AA DeepDream</a>
       with
       <a href="https://github.com/Hvass-Labs/TensorFlow-Tutorials">Tutoriales de Hvass-Labs sobre TensorFlow </a>
     </h2>
