--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <h2>
       <a href="https://github.com/Deruus/ProyectoFinalAA">Proyecto AA DeepDream</a>
-      with
+      con
       <a href="https://github.com/Hvass-Labs/TensorFlow-Tutorials">Tutoriales de Hvass-Labs sobre TensorFlow </a>
     </h2>
   </div>
